syntax = "proto3";

package my_package;

import "google/protobuf/timestamp.proto";
import "./my_sub_package.proto";

message MyMessage {
  int32 my_i32 = 1;
  string my_string = 2;
  bool my_bool = 3;
  float my_f32 = 4;

  message MySubMessage {
    int32 my_sub_i32 = 1;
  }

  MySubMessage my_sub_message = 5;

  repeated string my_strings = 6;

  enum MyEnum {
    VALUE0 = 0;
    VALUE1 = 1;
  }

  MyEnum my_enum = 7;

  oneof my_oneof {
    string my_oneof_value0 = 8;
    string my_oneof_value1 = 9;
  }

  google.protobuf.Timestamp my_timestamp = 10;

  bytes my_bytes = 11;

  optional int32 my_optional_i32 = 12;

  my_sub_package.MyMessage my_sub_package_message = 13;
}

service MyService {
  rpc MyUnary (MyMessage) returns (MyMessage);
  rpc MyClientStream (stream MyMessage) returns (MyMessage);
  rpc MyServerStream (MyMessage) returns (stream MyMessage);
  rpc MyBidiStream (stream MyMessage) returns (stream MyMessage);
}
